tests/NormalTests/paczka1/small_fuzzy/69880046.err
Error in line 3: 4VTA4 A436 48,3
Error in line 4: 4VTA4 A440 91,7
